GHO-125: add town regex skip audit log
